add deleted route

--- a/views/companies/index.hbs
+++ b/views/companies/index.hbs
@@ -9,7 +9,7 @@
     {{#each companies}}
     <div>
         {{this.name}} - {{this.state}}
-        <a href="/companies/{{this._id}}">{{this.name}} Info</a>
+        <a href="/companies/{{this._id}}">{{this.name}} Company</a>
     </div>
     {{/each}}
 </div>
