--- a/views/companies/show.hbs
+++ b/views/companies/show.hbs
@@ -9,3 +9,7 @@
         <a href="/companies/{{company._id}}/edit">Edit</a>
     </div>
     <div>
+        <a href="/companies/{{company._id}}/delete">Delete</a>
+    </div>
+</div>
+    
