added questions to cnn and got them to show up

--- a/views/questions/edit.hbs
+++ b/views/questions/edit.hbs
@@ -1,9 +1,9 @@
 <form action="/companies/{{companyId}}/questions/{{question._id}}?_method=PUT" method="POST">
     <label for="question">Question</label>
-    <input type="text" name="question" value="{{question.name}}">
+    <input type="text" name="question" value="{{question.questions}}">
 
     <label for="answer">Answer</label>
-    <input type="number" name="answer" value="{{question.price}}" step="any">
+    <input type="number" name="answer" value="{{question.answer}}" step="any">
 
     <input type="submit" value="Edit">
 </form>
