--- a/views/questions/new.hbs
+++ b/views/questions/new.hbs
@@ -2,8 +2,8 @@
     <label for="questions">questions</label>
     <input type="text" name="questions">
 
-    <label for="answers">Answers</label>
-    <input type="text" name="answers" step="any">
+    <label for="answer">Answers</label>
+    <input type="text" name="answer" step="any">
 
     <input type="submit" value="Create">
 </form>
