--- a/views/companies/show.hbs
+++ b/views/companies/show.hbs
@@ -10,6 +10,8 @@
     </div>
     <div>
         <a href="/companies/{{company._id}}/delete">Delete</a>
+
+        <a href="/companies/{{company._id}}/questions">Questions</a>
     </div>
 </div>
     
