added a delete route

--- a/views/questions/index.hbs
+++ b/views/questions/index.hbs
@@ -13,6 +13,7 @@
         <div>
             {{this.questions}} - {{this.answer}}
             <a href="/companies/{{../company._id}}/questions/{{this._id}}">View</a>
+            <a href="/companies/{{"></a>
         </div>
     {{/each}}
 </div>
