added the new route

--- a/views/questions/index.hbs
+++ b/views/questions/index.hbs
@@ -1,5 +1,5 @@
 <div>
-    <h1>{{company.name}}'s Questions</h1>
+    <h1>{{company.name}}'s Why Question</h1>
 
     <div>
         <a href="/companies/{{company._id}}/questions/new">Create a New Questions</a>
@@ -11,9 +11,9 @@
     
     {{#each company.questions}}
         <div>
-            {{this.questions}} - {{this.answer}}
+            {{this.questions}}?
             <a href="/companies/{{../company._id}}/questions/{{this._id}}">View</a>
-            <a href="/companies/{{"></a>
+            
         </div>
     {{/each}}
 </div>
