--- a/views/questions/new.hbs
+++ b/views/questions/new.hbs
@@ -1,5 +1,5 @@
 <form action="/companies/{{companyId}}/questions" method="POST">
-    <label for="questions">questions</label>
+    <label for="questions">Questions</label>
     <input type="text" name="questions">
 
     <label for="answer">Answers</label>
