made a delete route work

--- a/views/questions/show.hbs
+++ b/views/questions/show.hbs
@@ -1,5 +1,5 @@
 <div>
     {{question.questions}} - {{question.answer}}
     <a href="/companies/{{companyId}}/questions/{{question._id}}/edit">Edit</a>
-    <a href="/companies/{{companyId}}/questions/{{snowboard._id}}/delete">Delete</a>
+    <a href="/companies/{{companyId}}/questions/{{question._id}}/delete">Delete</a>
 </div>
