change number to text and took out steps

--- a/views/questions/edit.hbs
+++ b/views/questions/edit.hbs
@@ -3,7 +3,7 @@
     <input type="text" name="question" value="{{question.questions}}">
 
     <label for="answer">Answer</label>
-    <input type="number" name="answer" value="{{question.answer}}" step="any">
+    <input type="text" name="answer" value="{{question.answer}}">
 
     <input type="submit" value="Edit">
 </form>
