--- a/views/companies/show.hbs
+++ b/views/companies/show.hbs
@@ -1,4 +1,5 @@
 <div>
+   <img class="materialboxed" width="200" src="{{company.logo}}">
     <h1>{{company.name}}</h1>
     <div>State: {{company.state}}</div>
 
