--- a/views/questions/new.hbs
+++ b/views/questions/new.hbs
@@ -3,7 +3,7 @@
     <input type="text" name="questions">
 
     <label for="answer">Answers</label>
-    <input type="text" name="answer" step="any">
+    <input type="text" name="answer" >
 
     <input type="submit" value="Create">
 </form>
