--- a/views/companies/edit.hbs
+++ b/views/companies/edit.hbs
@@ -1,5 +1,5 @@
 <form action="/companies/{{company._id}}?_method=PUT" method="POST">
-    <label for="name">Name</label>
+<label for="name">Name</label>
     <input type="text" name="name" value="{{company.name}}">
 
     <label for="state">State</label>
@@ -7,3 +7,6 @@
 
     <input type="submit" value="Edit">
 </form>
+<img src="https://media.giphy.com/media/7zusy37fwKjfy/giphy.gif" alt="Lower ">
+
+    
