--- a/views/companies/index.hbs
+++ b/views/companies/index.hbs
@@ -1,8 +1,23 @@
-<div>
+ <nav >
+    <div class="nav-wrapper">
+         
 
+      <a href="https://bobtheriot.files.wordpress.com/2015/07/interview-logo.png" class="brand-logo right">Get Prep</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="sass.html">Sign Up </a></li>
+        <li><a href="/views/new">Login</a></li>
+        <li><a href="collapsible.html">Jobs</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="center">
+        
 
     <h1>Get Prep</h1>
-    
+    <img src="https://bobtheriot.files.wordpress.com/2015/07/interview-logo.png" alt="Get Prep">
+
+
     <h3>Companies</h3>
     <div>
         <a href="/companies/new">Add New Company</a>
@@ -15,4 +30,4 @@
     {{/each}}
     
 
-</div>
+</div> 
