--- a/views/companies/show.hbs
+++ b/views/companies/show.hbs
@@ -2,17 +2,20 @@
    <img class="materialboxed" width="200" src="{{company.logo}}">
     <h1>{{company.name}}</h1>
     <div>State: {{company.state}}</div>
-
+      
+      <ul>
     <div>
         <a href="/companies">Back to Companies</a>
     </div>
     <div>
+     
         <a href="/companies/{{company._id}}/edit">Edit</a>
     </div>
     <div>
-        <a href="/companies/{{company._id}}/delete">Delete</a>
-
-        <a href="/companies/{{company._id}}/questions">Questions</a>
+       <li><a href="/companies/{{company._id}}/delete">Delete</a>
+</li> 
+       <li><a href="/companies/{{company._id}}/questions">Questions</a></li> 
     </div>
+     
 </div>
-    
+  </ul>
