--- a/views/questions/index.hbs
+++ b/views/questions/index.hbs
@@ -1,5 +1,13 @@
 <div>
-    <h1>{{company.name}}'s Why Question</h1>
+    <h1>{{company.name}}'s Question</h1>
+
+    {{#each company.questions}}
+        <div>
+            {{this.questions}}?
+            <a href="/companies/{{../company._id}}/questions/{{this._id}}">View</a>
+            
+        </div>
+    {{/each}}
 
     <div>
         <a href="/companies/{{company._id}}/questions/new">Create a New Questions</a>
@@ -8,12 +16,4 @@
     <div>
         <a href="/companies">Back to Companies</a>
     </div>
-    
-    {{#each company.questions}}
-        <div>
-            {{this.questions}}?
-            <a href="/companies/{{../company._id}}/questions/{{this._id}}">View</a>
-            
-        </div>
-    {{/each}}
 </div>
