--- a/views/companies/index.hbs
+++ b/views/companies/index.hbs
@@ -1,11 +1,11 @@
  <nav >
-    <div class="nav-wrapper">
+    <div class="nav-wrapper light-blue lighten">
          
 
       <a href="https://bobtheriot.files.wordpress.com/2015/07/interview-logo.png" class="brand-logo right">Get Prep</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="sass.html">Sign Up </a></li>
-        <li><a href="/views/new">Login</a></li>
+        <li><a href="users/new"> Create User </a></li>
+        <li><a href="/users/index">What to Wear </a></li>
         <li><a href="collapsible.html">Jobs</a></li>
       </ul>
     </div>
@@ -20,14 +20,14 @@
 
     <h3>Companies</h3>
     <div>
-        <a href="/companies/new">Add New Company</a>
+        <a href="/companies/new">Add New Company</a> 
     </div>
     {{#each companies}}
     <div>
         {{this.name}} - {{this.state}}
         <a href="/companies/{{this._id}}">{{this.name}} Company</a>
     </div>
-    {{/each}}
+    {{/each}} 
     
 
 </div> 
