things working fine

--- a/views/companies/index.hbs
+++ b/views/companies/index.hbs
@@ -5,7 +5,7 @@
       <a href="https://bobtheriot.files.wordpress.com/2015/07/interview-logo.png" class="brand-logo right">Get Prep</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="users/new"> Create User </a></li>
-        <li><a href="/users/index">What to Wear </a></li>
+        <li><a href="/users"> Demos </a></li>
         <li><a href="collapsible.html">Jobs</a></li>
       </ul>
     </div>
