--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,6 +1,16 @@
+
+<h1>What to Wear</h1>
 <form action="/users" method="POST"></form>
 
 <div class="video-container">
-        <iframe width="853" height="480" src="//www.youtube.com/embed/Q8TXgCzxEnw?rel=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="200" height="150" src="https://www.youtube.com/embed/0EjqOCpM7d8"  allowfullscreen></iframe>
+
+       
       </div>
+
+      <div class="video-container2">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/S1ucmfPOBV8"  allowfullscreen></iframe>
+       
+      </div>
+        
         
