works finishing up on css

--- a/views/questions/show.hbs
+++ b/views/questions/show.hbs
@@ -4,6 +4,7 @@
           <li>{{question.answer}}</li>
     </ul>
    
-    <a href="/companies/{{companyId}}/questions/{{question._id}}/edit">Edit</a>
-    <a href="/companies/{{companyId}}/questions/{{question._id}}/delete">Delete</a>
+   <li><a href="/companies/{{companyId}}/questions/{{question._id}}/edit">Edit</a></li> 
+   <li><a href="/companies/{{companyId}}/questions/{{question._id}}/delete">Delete</a></li> 
+    <li><a href="/companies">Back to Companies</a> </li>
 </div>
