--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,5 +1,5 @@
 
-<h1>What to Wear</h1>
+<h1>The To Do's and Not To Do's</h1>
 <form action="/users" method="POST"></form>
 
 <div class="video-container">
@@ -8,7 +8,7 @@
        
       </div>
 
-      <div class="video-container2">
+      <div class="video-container">
      <iframe width="560" height="315" src="https://www.youtube.com/embed/S1ucmfPOBV8"  allowfullscreen></iframe>
        
       </div>
