--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,3 +1,5 @@
+<h1>New User</h1>
+
 <div class="row">
     <form class="col s12" action="/users" method="POST">
         <div class="input-field col s6">
@@ -20,11 +22,7 @@
           <input id="email" type="email" class="validate">
           <label for="email">Email</label>
         </div>
-        <div class="col s12">
-          <div class="input-field inline">
-            <input id="email" type="email" class="validate">
-            <label for="email" data-error="wrong" data-success="right">Email</label>
-        </div>
+        
       </div>
     </form>
 </div>
