--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: rgb(0, 183, 255);
 }
 
 img {
@@ -19,6 +19,11 @@ img {
   color: black;
 }
 
+
+.btn {
+  color: rgb(0, 183, 255);
+  background-color: slategray;
+}
 
 label {
   color: black;
