added new css and fix videos

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,16 +1,18 @@
-
-<h1>The To Do's and Not To Do's</h1>
+<h1>
+  Wrongs and Rights</h1>
 <form action="/users" method="POST"></form>
+<div class="row">
 
-<div class="video-container">
-        <iframe width="200" height="150" src="https://www.youtube.com/embed/0EjqOCpM7d8"  allowfullscreen></iframe>
 
-       
-      </div>
+  <div class="video-container col s6 ">
+    <iframe width="200" height="315" src="https://www.youtube.com/embed/0EjqOCpM7d8" allowfullscreen></iframe>
 
-      <div class="video-container">
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/S1ucmfPOBV8"  allowfullscreen></iframe>
-       
-      </div>
-        
-        
+
+  </div>
+
+  <div class="video-container col s6 ">
+    <iframe width="200" height="315" src="https://www.youtube.com/embed/S1ucmfPOBV8" allowfullscreen></iframe>
+
+  </div>
+
+</div>
