--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,11 @@
 body {
   font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: slategray;
+  background-color: wheat;
   
 }
 
 a {
-  color: rgb(0, 183, 255);
+  color: brown;
 }
 
 img {
@@ -21,8 +21,8 @@ img {
 
 
 .btn {
-  color: rgb(0, 183, 255);
-  background-color: slategray;
+  color: black;
+  background-color: peru;
 }
 
 label {
@@ -36,7 +36,7 @@ label {
 
 .video-container {
   width: 50%;
-  height: 10px;
+  height: 500px;
   
 }
 
