--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -61,6 +61,16 @@
       <input type="checkbox" id="test4" />
       <label for="test4">Resume</label>
     </p>
+
+    <p>
+      <input type="checkbox" id="test2" />
+      <label for="test2">Cover Letter</label>
+    </p>
+
+    <p>
+      <input type="checkbox" id="test1" />
+      <label for="test1">Postive Attitude</label>
+    </p>
         
 
         
